# deepeval-example

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.MD  README.md  main.py  pyproject.toml
src/deep_research/: __init__.py  agent.py  evaluate.py  evaluators.py  logging.py  prompts.py  state.py  tools.py  tracking.py
tests/: conftest.py  test_agent.py  test_evaluators.py  test_logging.py  test_prompts.py  test_state.py  test_tools.py  test_tracking.py
